--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -26,13 +26,25 @@ RUN apt-get install -y grep
 
 RUN apt-get install -y apt-transport-https ca-certificates
 
+RUN apt-get update
+
+RUN apt-get -y install openssl
+
+
 #Install Apache
 
+RUN apt-get update
+
 RUN apt-get install -y apache2
+
+RUN apt-get update
 
 #Install vim
 
 RUN apt-get install -y vim
+
+#Lets Encrypt
+RUN apt-get install -y python-certbot-apache
 
 # Clean package list to save space
 RUN rm -rf /var/lib/apt/lists/* 
@@ -43,14 +55,27 @@ RUN apt-get clean
 #Execute a command [ CMD - Execute a command when ever the docker image is run ]
 #CMD ["touch", "/test123.txt"]
 
+#Run this script only once
+COPY 000-default.conf /000-default.conf
+COPY 000-default-le-ssl.conf  /000-default-le-ssl.conf 
+COPY setup_script.sh /setup_script.sh
 COPY startup_script.sh /startup_script.sh
+RUN chmod +x /setup_script.sh
 RUN chmod +x /startup_script.sh
+
+
+RUN /setup_script.sh
+
+RUN a2enmod rewrite
+
+RUN a2enmod ssl
 
 #This script will be called each time the container is started
 ENTRYPOINT /startup_script.sh
 
 # Expose port for applications
-EXPOSE 80 443
+EXPOSE 80 
+EXPOSE 443
 
 #Execte the command during startup
 #CMD service apache2 start
